# copy_trader

./: .env.example  .gitignore  AGENTS.md  README.md  config.example.yaml  config.production.yaml  config.yaml  pyproject.toml  walkthrough.md
docs/: API-CONTRACTS.md  CONFIG-SCHEMA.md  DECISION-ENGINE.md  EPHEMERAL-STATE.md  ERROR-TAXONOMY.md  HANDOFF.md  LOGGING-FORMAT.md  MVP-observability-followups.md  OPERATOR-RUNBOOK.md  PRD.md  PROD-CONFIG-REVIEW.md  PROJECT-SKELETON.md  RUNTIME-STATE-MACHINE.md  SPEC.md
scripts/: pnl_report.py
src/copy_trader/: __init__.py  cli.py  main.py
src/copy_trader/app/: service.py
src/copy_trader/config/: loader.py  models.py  validation.py
src/copy_trader/exchange/: binance_client.py  models.py  precision.py
src/copy_trader/execution/: executor.py  flip_handler.py  models.py
src/copy_trader/logging/: events.py  setup.py
src/copy_trader/runtime/: cooldown.py  loop.py  modes.py
src/copy_trader/source/: hyperliquid_reader.py  models.py  normalization.py
src/copy_trader/storage/: schema.py  sqlite_store.py
src/copy_trader/strategy/: decision_types.py  price_guard.py  reconciliation.py  risk_policy.py  target_calculator.py
tests/: conftest.py
tests/integration/: test_executor.py  test_loop_execution.py  test_sqlite_store.py
tests/unit/: test_config.py  test_normalization.py  test_pnl_report.py  test_reconciliation.py  test_runtime_modes.py
